--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "errsole-mysql",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.2",
+  "description": "MySQL storage plugin for Errsole",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Rishi Kumar",
-  "license": "MIT"
+  "keywords": [
+    "errsole",
+    "mysql",
+    "log",
+    "logs",
+    "logging",
+    "logger"
+  ],
+  "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "mysql2": "^3.10.1"
+  },
+  "files": [
+    "lib/index.js"
+  ]
 }
