--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mysql2": "^3.10.1"
+    "mysql2": "^3.10.1",
+    "node-cron": "^3.0.3"
   },
   "files": [
     "lib/index.js"
