--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MySQL storage plugin for Errsole",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "keywords": [
     "errsole",
@@ -22,5 +22,9 @@
   },
   "files": [
     "lib/index.js"
-  ]
+  ],
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "jest": "^29.7.0"
+  }
 }
