--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MySQL storage plugin for Errsole",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "keywords": [
     "errsole",
@@ -25,6 +26,7 @@
   ],
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "coveralls": "^3.1.1",
     "jest": "^29.7.0"
   }
 }
