--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "errsole-mysql",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "description": "MySQL storage plugin for Errsole",
   "main": "lib/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
-    "test": "jest --coverage",
-    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "errsole",
@@ -18,15 +18,11 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "mysql2": "^3.10.1",
+    "mysql2": "^2.3.3",
     "node-cron": "^3.0.3"
   },
   "files": [
-    "lib/index.js"
-  ],
-  "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "coveralls": "^3.1.1",
-    "jest": "^29.7.0"
-  }
+    "lib",
+    "types"
+  ]
 }
