--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "files": [
     "lib",
     "types"
-  ]
+  ],
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "coveralls": "^3.1.1",
+    "jest": "^29.7.0"
+  }
 }
