--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish to npm
+name: Publish the Errsole MySQL package to npm
 
 on:
   release:
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  build:
+  test_and_publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -27,6 +27,7 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_MYSQL_TOKEN }}
 
+      # Publish the package to npm
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
